@@ -2468,7 +2468,7 @@ Here are some more advanced examples of scripting:
 
 --------
 define lastchange {
-@max(=B & [/ChangeLog/] & /{0}/B)? list
+@max(=B & [/ChangeLog/] & /%{0}/B)? list
 }
 --------
 
@@ -3194,7 +3194,7 @@ a very common pre-conversion artifact is a commit with the comment
 entry explaining the commit immediately previous to it. The following
 
 --------
-define changelog <{0}> & /empty log message/ squash --pushback
+define changelog <%{0}> & /empty log message/ squash --pushback
 do changelog 2012-08-14T21:51:35Z
 do changelog 2012-08-08T22:52:14Z
 do changelog 2012-08-07T04:48:26Z
